<resources>
    <string name="app_name" translatable="false">Your Greenhouses</string>

    <!-- activity_alerts.xml -->
    <string name="noAlert_text">No alerts available!</string>
    <string name="deleteAlert_title">Alert Delete</string>
    <string name="deleteAlert_text">Are you sure you want to delete all alerts?</string>
    <string name="alertsSuccDeleted_toastText">Alerts deleted successfully!</string>
    <string name="failedDeleteAlerts_toastText">Failed to delete alerts!</string>

    <!-- user profile -->
    <string name="fullName_text">"Full name: "</string>
    <string name="password_text">"Password: "</string>
    <string name="repeatPassword_text">"Repeat Password: "</string>
    <string name="email_text">"Email: "</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_buttonText">Login</string>
    <string name="or_text">or</string>
    <string name="register_buttonText">Register</string>

    <!-- iconDescription -->
    <string name="profileIcon_imageDescription">Profile Menu</string>
    <string name="deleteGreenhouse_imageDescription">Delete Greenhouse</string>
    <string name="temperatureIcon_imageDescription">Temperature</string>
    <string name="humidityIcon_imageDescription">Air Humidity</string>
    <string name="soilHumidityIcon_imageDescription">Soil Humidity</string>
    <string name="luminosityIcon_imageDescription">Luminosity</string>
    <string name="alertIcon_imageDescription">Alert</string>
    <string name="details_imageDescription">Details</string>
    <string name="weatherIcon_imageDescription">Weather</string>
    <string name="windIcon_imageDescription">Wind</string>
    <string name="noInternet_imageDescription">No Internet Connection!</string>
    <string name="historyChart_labelDescription">Time Line</string>

    <!-- textTitle -->
    <string name="information_textTitle">Information</string>
    <string name="temperature_textTitle">Temperature</string>
    <string name="humidity_textTitle">Air Humidity</string>
    <string name="luminosity_textTitle">Luminosity</string>
    <string name="soilHumidity_textTitle">Soil Humidity</string>
    <string name="irrigation_textTitle">Irrigation</string>
    <string name="action_textTitle">Action</string>
    <string name="light_textTitle">Light</string>
    <string name="date_textTitle">Date</string>

    <!-- activityText -->
    <string name="alerts_activityTitle">Alerts</string>
    <string name="history_activityTitle">History</string>
    <string name="settings_activityTitle">Settings</string>
    <string name="login_activityTitle">Login</string>
    <string name="register_activityTitle">Register</string>
    <string name="profile_activityTitle">Profile</string>
    <string name="greenhouseDetails_activityTitle">Greenhouse Details</string>

    <!-- text -->
    <string name="defaultTemperature_text" translatable="false">00.0 C</string>
    <string name="defaultSoilhumidity_text" translatable="false">0%</string>
    <string name="defaultLuminodity_text" translatable="false">0%</string>
    <string name="editName_text">Greenhouse Name</string>
    <string name="minAirTemperature_text">Min Temperature</string>
    <string name="maxAirTemperature_text">Max Temperature</string>
    <string name="minAirHumidity_text">Min Air Humidity</string>
    <string name="maxAirHumidity_text">Max Air Humidity</string>
    <string name="minSoilHumidity_text">Min Soil Humidity</string>
    <string name="maxSoilHumidity_text">Max Soil Humidity</string>
    <string name="minLuminosity_text">Min Luminosity</string>
    <string name="maxLuminosity_text">Max Luminosity</string>
    <string name="noGreenhousesFound_text">No greenhouses found!</string>
    <string name="accountInformation_text">Account Information</string>
    <string name="connectedDevices_text">Connected Greenhouses</string>
    <string name="notAvailable_text">Not available!</string>
    <string name="weatherForecast_text">Weather Forecast</string>
    <string name="noInternet_text">No Internet Connection!</string>
    <string name="weatherError_text">No Weather Data Found</string>
    <string name="greenhouseID_textHint">Greenhouse ID</string>
    <string name="lastData_text">Last Update: </string>
    <string name="terms_conditions_title"><![CDATA[Terms & Condition]]></string>
    <string name="terms_conditions_text">View Terms and Conditions</string>
    <string name="terms_conditions_full_text">Introduction  \nWelcome to our application.  \nBy accessing or using our app, you agree to be bound by these terms and conditions.   \n2. Use of the App You agree to use the app only for lawful purposes and in a way that does not infringe the rights of others or restrict their use and enjoyment of the app.   \n3. Privacy We are committed to protecting your privacy. Our privacy policy explains how we collect, use, and disclose information about you.   \n4. Intellectual Property All content, trademarks, and data on this app, including but not limited to software, databases, text, graphics, icons, and hyperlinks, are the property of or licensed to us and are protected by law.   \n5. Limitation of Liability We are not liable for any direct, indirect, incidental, or consequential damages arising out of your use of the app.   \n6. Changes to Terms We reserve the right to modify these terms and conditions at any time. Your continued use of the app following any changes signifies your acceptance of the new terms.   \n7. Governing Law These terms and conditions are governed by and construed in accordance with the laws of Italy.   \n8. Contact Us If you have any questions about these terms and conditions, please contact us.   \nBy using our app, you acknowledge that you have read, understood, and agree to be bound by these terms and conditions.</string>

    <!-- buttonText -->
    <string name="startEditing_buttonText">Start Editing Settings</string>
    <string name="save_buttonText">Save</string>
    <string name="confirm_buttonText">Confirm</string>
    <string name="cancel_buttonText">Cancel</string>

    <!-- buttonDescription -->
    <string name="addGreenhouse_buttonDescription">Add Greenhouse</string>
    <string name="deleteGreenhouse_buttonDescription">Delete Greenhouse</string>
    <string name="defaultHumidity_text" translatable="false">0%</string>
    <string name="login_imageDescription">Login</string>
    <string name="logout_imageDescription">Logout</string>
    <string name="addDevice_imageDescription">Add Greenhouses</string>

    <!-- toastText -->
    <string name="IDNotFound_toastText">Greenhouse not found!</string>
    <string name="failedLoadData_toastText">Failed to load data!</string>
    <string name="failedSaveData_toastText">Failed to save data!</string>
    <string name="saveData_toastText">Data saved!</string>
    <string name="notValidData_toastText">Not valid data!</string>
    <string name="failedDeleteData_toastText">Failed to delete data!</string>
    <string name="emailEmpty_toastText">Email is empty!</string>
    <string name="passwordEmpty_toastText">Password is empty!</string>
    <string name="resetPasswordSuccess_toastText">Password reset email sent!</string>
    <string name="resetPasswordFailed_toastText">Failed to send password reset email!</string>
    <string name="registerSuccess_toastText">Registered successfully!</string>
    <string name="registerFailed_toastText">Failed to register!</string>
    <string name="emptyField_toastText">Empty field!</string>
    <string name="passwordNotMatch_toastText">Passwords do not match!</string>
    <string name="failedLogin_toastText">Failed to login!</string>
    <string name="loginSuccess_toastText">Logged in successfully!</string>
    <string name="logoutSuccess_toastText">Logged out successfully!</string>
    <string name="devideDisconnected_toastText">Greenhouse disconnected!</string>
    <string name="failedDevideDisconnected_toastText">Failed to disconnect greenhouse!</string>
    <string name="notAuthenticatedUser_toastText">Not authenticated user!</string>
    <string name="greenhouseAlredyConnected_toastText">Greenhouse already connected!</string>
    <string name="succConnectGreenhouse_toastText">Greenhouse connected!</string>
    <string name="failedConnectGreenhouse_toastText">Failed to connect greenhouse!</string>

    <!-- dialogText -->
    <string name="deleteGreenhouse_dialogText">Are you sure you want to disconnect this greenhouse?</string>
    <string name="disconnectedGreenhouse_dialogTitle">Disconnected Greenhouse</string>
    <string name="info">Legend</string>
    <string name="infoHistoryChart_dialogText">The following charts express the information collected from the greenhouse over time. \nThe more active the greenhouse is, the more data is collected, and consequently, the more detailed the charts are. \n\nTo correctly interpret the chart, the unit of measure related to the specific information (°C or %) should be placed on the ordinate axis, while the timeline should be placed on the abscissa axis.</string>
    <string name="infoHistoryChart_dialogTitle">Information about the History Charts</string>
    <string name="viewGreenhouses_buttonText">View Greenhouses</string>
    <string name="widgetConfiguration_text">Widget Configuration</string>
    <string name="widgetSelect_text">Select a greenhouse:</string>

    <!-- widget -->
    <string name="greenhouse_widget_label">Greenhouse Widget</string>
    <string name="greenhouse_widget_description">Displays the greenhouse status</string>

</resources>