<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Titolo Meteo e Città -->
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/weatherForecast_text"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:visibility="visible"
            android:text="@string/weatherError_text" />

        <!-- Icona meteo -->
        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:visibility="invisible"
            android:contentDescription="@string/weatherIcon_imageDescription"
            android:layout_gravity="center"/>

        <!-- Descrizione del meteo -->
        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <!-- Dati del meteo (temperatura, umidità, vento) con icone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iconTemperature"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_temperature"
                    android:contentDescription="@string/temperatureIcon_imageDescription"
                    android:visibility="invisible"
                    app:tint="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/textTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iconHumidity"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_humidity"
                    android:contentDescription="@string/humidityIcon_imageDescription"
                    android:visibility="invisible"
                    app:tint="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/textHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iconWind"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_wind"
                    android:contentDescription="@string/windIcon_imageDescription"
                    android:visibility="invisible"
                    app:tint="@android:color/darker_gray" />
                <TextView
                    android:id="@+id/textWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>